# desktop_ai_assistant

./: .gitignore  README.md
backend/: assistant.db  assistant_settings.json  auth.py  chat_history.json  database.py  get_data.py  main.py  models.py  screenshot_service.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.jsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
